Fix ./libgc.la dependency on FreeBSD (Automake)
Issue #361 (bdwgc).

For some reason, BSD make do not use the Makefile rule to satisfy
a dependency on ./libgc.la.

Note: this change should not break builds on other targets (e.g. based
on GNU make) as $top_builddir should be expanded to ".".

* Makefile.am [CPLUSPLUS] (libgccpp_la_LIBADD): Remove "./" prefix.
* Makefile.am [CPLUSPLUS && GC_TBA_LIBRARY] (libgctba_la_LIBADD):
Likewise.
* cord/cord.am (libcord_la_LIBADD): Remove "$(top_builddir)/" prefix.

--- a/cord/cord.am
+++ b/cord/cord.am
@@ -7,7 +7,7 @@ LIBCORD_VER_INFO = 5:0:4
 
 lib_LTLIBRARIES += libcord.la
 
-libcord_la_LIBADD = $(top_builddir)/libgc.la
+libcord_la_LIBADD = libgc.la
 libcord_la_LDFLAGS = -version-info $(LIBCORD_VER_INFO) -no-undefined
 libcord_la_CPPFLAGS = $(AM_CPPFLAGS)
 
