--- a/Makefile.am
+++ b/Makefile.am
@@ -136,13 +136,13 @@ lib_LTLIBRARIES += libgccpp.la
 pkginclude_HEADERS += include/gc_allocator.h include/gc_cpp.h
 include_HEADERS += include/extra/gc_cpp.h
 libgccpp_la_SOURCES = gc_badalc.cc gc_cpp.cc
-libgccpp_la_LIBADD = ./libgc.la
+libgccpp_la_LIBADD = libgc.la
 libgccpp_la_LDFLAGS = -version-info $(LIBGCCPP_VER_INFO) -no-undefined
 if GC_TBA_LIBRARY
 # The same as libgccpp but contains only gc_badalc.o.
 lib_LTLIBRARIES += libgctba.la
 libgctba_la_SOURCES = gc_badalc.cc
-libgctba_la_LIBADD = ./libgc.la
+libgctba_la_LIBADD = libgc.la
 # Set the same version as for libgccpp.
 libgctba_la_LDFLAGS = -version-info $(LIBGCCPP_VER_INFO) -no-undefined
 endif
