Eliminate GCC warning of unsafe __builtin_return_address(1)
Detect in configure if it is possible to use __builtin_return_address(1)
w/o warnings if -Wno-frame-address option is passed to the
compiler - if yes, then pass the option to CFLAGS in Makefile.

* configure.ac (AC_TRY_COMPILE): Try to compile a code snippet with
__builtin_return_address(1) with temporary CFLAGS adding -Werror and
-Wno-frame-address (and CFLAGS_EXTRA).
* configure.ac (use_wno_error_frame_address): New variable (set to yes
if AC_TRY_COMPILE succeeded).
* configure.ac [use_wno_error_frame_address] (CFLAGS) Append
-Wno-frame-address.

--- a/configure.ac
+++ b/configure.ac
@@ -755,6 +755,22 @@ AC_ARG_ENABLE(gc-debug,
 AM_CONDITIONAL([MAKE_BACK_GRAPH], [test x"$enable_gc_debug" = xyes])
 AM_CONDITIONAL([KEEP_BACK_PTRS], [test x"$keep_back_ptrs" = xtrue])
 
+# Check whether a compiler warning of unsafe __builtin_return_address(1)
+# could be suppressed by -Wno-frame-address option.
+# __builtin_return_address(1) is used by libgc for debugging purposes only.
+AC_MSG_CHECKING([whether -Wno-frame-address works])
+use_wno_error_frame_address=no
+old_CFLAGS="$CFLAGS"
+CFLAGS="$CFLAGS -Werror -Wno-frame-address $CFLAGS_EXTRA"
+AC_TRY_COMPILE([], [{
+    if (!__builtin_return_address(1)) return 1;
+}], [ use_wno_error_frame_address=yes ])
+CFLAGS="$old_CFLAGS"
+AC_MSG_RESULT($use_wno_error_frame_address)
+if test x"$use_wno_error_frame_address" = xyes; then
+  CFLAGS="$CFLAGS -Wno-frame-address"
+fi
+
 # Check for dladdr (used for debugging).
 AC_MSG_CHECKING(for dladdr)
 have_dladdr=no
