Remove new_gc_alloc.h file
The removed header was not exported anyway and provided the SGI-style
allocators depending on an ancient STL version.

* Makefile.direct (SRCS): Remove include/new_gc_alloc.h; rename
include/gc_alloc_ptrs.h to include/private/gc_alloc_ptrs.h.
* include/include.am (dist_noinst_HEADERS): Likewise.
* doc/gcinterface.md (STL allocators): Remove information about
SGI-style allocators (defined in new_gc_alloc.h).
* include/new_gc_alloc.h: Remove file.
* include/gc_alloc_ptrs.h: Move to include/private folder.
* include/private/gc_alloc_ptrs.h [!GC_API_PRIV] (GC_API_PRIV): Define.
* include/private/gc_alloc_ptrs.h (GC_objfreelist_ptr,
GC_aobjfreelist_ptr, GC_uobjfreelist_ptr, GC_incr_bytes_allocd,
GC_incr_bytes_freed): Use GC_API_PRIV instead of GC_API.
* include/private/gc_alloc_ptrs.h [GC_ATOMIC_UNCOLLECTABLE]
(GC_auobjfreelist_ptr): Likewise.
* mallocx.c: Include private/gc_alloc_ptrs.h (instead of
gc_alloc_ptrs.h).
* mallocx.c (GC_incr_bytes_allocd, GC_incr_bytes_freed): Remove GC_API.
* tests/test_cpp.cc: Include "gc_allocator.h" (even if
DONT_USE_STD_ALLOCATOR).
* tests/test_cpp.cc (main): Remove code inside ifdef
DONT_USE_STD_ALLOCATOR blocks.

--- a/include/include.am
+++ b/include/include.am
@@ -32,11 +32,10 @@ dist_noinst_HEADERS += \
         include/cord.h \
         include/cord_pos.h \
         include/ec.h \
-        include/gc_alloc_ptrs.h \
-        include/new_gc_alloc.h \
         include/private/darwin_semaphore.h \
         include/private/darwin_stop_world.h \
         include/private/dbg_mlc.h \
+        include/private/gc_alloc_ptrs.h \
         include/private/gc_atomic_ops.h \
         include/private/gc_hdrs.h \
         include/private/gc_locks.h \
