--- a/Makefile.direct
+++ b/Makefile.direct
@@ -109,7 +109,7 @@ SRCS= $(CSRCS) \
   include/private/gcconfig.h include/private/gc_pmark.h \
   include/gc_inline.h include/gc_mark.h include/gc_disclaim.h \
   tools/threadlibs.c tools/if_mach.c tools/if_not_there.c gc_badalc.cc \
-  gc_cpp.cc include/gc_cpp.h include/new_gc_alloc.h include/gc_alloc_ptrs.h \
+  gc_cpp.cc include/gc_cpp.h include/private/gc_alloc_ptrs.h \
   include/gc_allocator.h include/javaxfc.h include/gc_backptr.h \
   include/gc_gcj.h include/private/gc_locks.h include/private/dbg_mlc.h \
   include/private/specific.h include/leak_detector.h \
