Do not compile pthread_*.c files in Cygwin or MSYS (CMake)
* CMakeLists.txt [CMAKE_USE_PTHREADS_INIT] (SRC): Do not add
pthread_start.c, pthread_stop_world.c, pthread_support.c if CYGWIN
or MSYS.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,8 +163,12 @@ set(ATOMIC_OPS_LIBS "") # TODO: Assume libatomic_ops library is not needed.
 
 # Thread support detection.
 if (CMAKE_USE_PTHREADS_INIT)
-  set(SRC ${SRC} gc_dlopen.c pthread_start.c pthread_stop_world.c
-        pthread_support.c)
+  set(SRC ${SRC} gc_dlopen.c)
+  if (CYGWIN OR MSYS)
+    set(SRC ${SRC} win32_threads.c)
+  else()
+    set(SRC ${SRC} pthread_start.c pthread_stop_world.c pthread_support.c)
+  endif()
   if (HOST MATCHES .*-.*-hpux10.*)
     message(FATAL_ERROR "HP/UX 10 POSIX threads are not supported.")
   endif()
@@ -202,9 +206,6 @@ if (CMAKE_USE_PTHREADS_INIT)
   endif()
   if (enable_sigrt_signals)
     add_definitions("-DGC_USESIGRT_SIGNALS")
-  endif()
-  if (CYGWIN OR MSYS)
-    set(SRC ${SRC} win32_threads.c)
   endif()
 elseif (CMAKE_USE_WIN32_THREADS_INIT)
   add_definitions("-DGC_THREADS")
