Install gc_gcj.h and gc_pthread_redirects.h only if appropriate
gc_gcj.h should not be installed if support for gcj is off.
gc_pthread_redirects.h should not be installed if threads support
is off or not based on pthread library.

* CMakeLists.txt [install_headers] (FILES): Install include/gc_gcj.h
only if enable_gcj_support; install include/gc_pthread_redirects.h only
if enable_threads AND CMAKE_USE_PTHREADS_INIT.
* Makefile.am (libgc_la_SOURCES): Remove gcj_mlc.c unless
ENABLE_GCJ_SUPPORT.
* Makefile.am [PTHREADS] (pkginclude_HEADERS): Add
include/gc_pthread_redirects.h.
* Makefile.am [ENABLE_GCJ_SUPPORT] (pkginclude_HEADERS): Add
include/gc_gcj.h.
* configure.ac (ENABLE_GCJ_SUPPORT): New AM conditional.
* include/include.am (pkginclude_HEADERS): Remove gc_gcj.h and
gc_pthread_redirects.h.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -551,10 +551,8 @@ if (install_headers)
   install(FILES include/gc.h
                 include/gc_backptr.h
                 include/gc_config_macros.h
-                include/gc_gcj.h
                 include/gc_inline.h
                 include/gc_mark.h
-                include/gc_pthread_redirects.h
                 include/gc_tiny_fl.h
                 include/gc_typed.h
                 include/gc_version.h
@@ -571,6 +569,14 @@ if (install_headers)
   endif()
   if (enable_disclaim)
     install(FILES include/gc_disclaim.h
+            DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/gc")
+  endif()
+  if (enable_gcj_support)
+    install(FILES include/gc_gcj.h
+            DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/gc")
+  endif()
+  if (enable_threads AND CMAKE_USE_PTHREADS_INIT)
+    install(FILES include/gc_pthread_redirects.h
             DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/gc")
   endif()
   if (build_cord)
