Travis CI: Fix --enable-cplusplus option for gcc-9/s390x build (fix of commit cc3e67bb8)

--- a/.travis.yml
+++ b/.travis.yml
@@ -202,7 +202,7 @@ jobs:
     compiler: gcc-9
     env:
     - CFLAGS_EXTRA="-O3"
-    - CONF_OPTIONS="--enable-cpluspluss --disable-shared"
+    - CONF_OPTIONS="--enable-cplusplus --disable-shared"
     - NO_CLONE_LIBATOMIC_OPS=true
   - arch: s390x
     compiler: gcc
