Travis CI: Test with -D TEST_HANDLE_FORK (OS X)

--- a/.travis.yml
+++ b/.travis.yml
@@ -392,6 +392,7 @@ jobs:
     - NO_CLONE_LIBATOMIC_OPS=true
   - os: osx
     env:
+    - CFLAGS_EXTRA="-D TEST_HANDLE_FORK"
     - CONF_OPTIONS="--enable-cplusplus --disable-shared --enable-static"
   - os: osx
     env:
