Turn on automatic fork() handling by default on Android
Note: pthread_atfork() is available in Android NDK since API level 21.

* CMakeLists.txt [CMAKE_USE_PTHREADS_INIT && !MSYS && !APPLE
&& $enable_handle_fork && !$disable_handle_fork] (HANDLE_FORK): Define
macro (even for Android).
* configure.ac [$enable_handle_fork!=yes && $enable_handle_fork!=no
&& $enable_handle_fork!=manual && $THREADS==xposix
&& $host==*-*-android*] (HANDLE_FORK): Define AC macro.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -192,8 +192,8 @@ if (CMAKE_USE_PTHREADS_INIT)
     message("Only on NetBSD 2.0 or later.")
     add_definitions("-D_PTHREADS")
   endif()
-  if (ANDROID OR MSYS) # ANDROID variable is defined by CMake v3.7.0+.
-    # Android NDK does not provide pthread_atfork.
+  if (MSYS)
+    # Does not provide process fork functionality.
   elseif (APPLE)
     # The incremental mode conflicts with fork handling (for now).
     # Thus, HANDLE_FORK is not defined.
