--- a/.travis.yml
+++ b/.travis.yml
@@ -103,8 +103,8 @@ jobs:
         - libatomic-ops-dev
     env:
     - MAKEFILE_TARGETS="distcheck"
-    - GC_REAL_VERSION=7.2n
-    - AO_SRC_VER=v7.2i
+    - GC_REAL_VERSION=7.2o
+    - AO_SRC_VER=v7.2j
 
 before_install:
 - if [[ "$MAKEFILE_TARGETS" == *"dist"* ]]; then
