AppVeyor CI: Tailor config for release-8_2
Use libatomic_ops-7.6.x.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -59,7 +59,7 @@ environment:
 clone_depth: 50
 
 install:
-- cmd: git clone --depth=50 https://github.com/ivmai/libatomic_ops.git
+- cmd: git clone --depth=50 https://github.com/ivmai/libatomic_ops.git -b release-7_6
 
 build_script:
 - cmd: if [%TARGET%]==[cmake] (
