Travis CI: Tailor config for release-8_2
Remove scanning by Coverity and Codecov.
Use libatomic_ops-7.6.x.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,17 +14,6 @@ jobs:
     env:
     - CONF_OPTIONS="--enable-cplusplus"
     - NO_CLONE_LIBATOMIC_OPS=true
-  - env:
-    - COVERITY_SCAN_BRANCH=1
-    addons:
-      coverity_scan:
-        project:
-          name: ivmai/bdwgc
-          version: 8.2.0
-        notification_email: ivmai@mail.ru
-        branch_pattern: master
-        build_command_prepend: "./configure --enable-cplusplus --disable-shared --enable-single-obj-compilation"
-        build_command: make -j check CFLAGS_EXTRA=-DLINT2
   - addons:
       apt:
         packages:
@@ -714,7 +703,8 @@ before_install:
 
 install:
 - if [[ "$NO_CLONE_LIBATOMIC_OPS" != true ]]; then
-    git clone --depth=50 https://github.com/ivmai/libatomic_ops.git;
+    git clone --depth=50 https://github.com/ivmai/libatomic_ops.git
+            -b release-7_6;
   fi
 - if [[ "$CMAKE_CONFIG" == "" ]]; then
     ./autogen.sh;
@@ -776,7 +766,6 @@ after_success:
     lcov --remove coverage.info '/usr/*' 'cord/tests/*' 'libatomic_ops/*' 'tests/*' --output-file coverage.info;
     lcov --list coverage.info;
     coveralls-lcov --repo-token ${COVERALLS_TOKEN} coverage.info;
-    bash <(curl -s https://codecov.io/bash);
   fi
 
 deploy:
