Do not name GCC intrinsics as C11 ones
* CMakeLists.txt (GC_BUILTIN_ATOMIC): Do not mention C11 in comment
(or documentation) when referring to GCC intrinsics.
* configure.ac (GC_BUILTIN_ATOMIC): Likewise.
* include/private/gc_atomic_ops.h: Likewise.
* ChangeLog (8.0.0): Do not mention C11 when referring to GCC
intrinsics.
* doc/README.macros (GC_BUILTIN_ATOMIC): Likewise.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,7 +173,7 @@ if (CMAKE_USE_PTHREADS_INIT)
   if (HOST MATCHES .*-.*-hpux10.*)
     message(FATAL_ERROR "HP/UX 10 POSIX threads are not supported.")
   endif()
-  # Assume the compiler supports C11 (GCC) atomic intrinsics.
+  # Assume the compiler supports GCC atomic intrinsics.
   add_definitions("-DGC_BUILTIN_ATOMIC")
   # Common defines for POSIX platforms.
   add_definitions("-DGC_THREADS -D_REENTRANT")
