Do not name GCC intrinsics as C11 ones (a cherry-pick of commit 0acf6bc06 from 'release-8_2')
* configure.ac (GC_BUILTIN_ATOMIC): Do not mention C11 in comment
(or documentation) when referring to GCC intrinsics.
* include/private/gc_atomic_ops.h: Likewise.
* ChangeLog (8.0.0): Do not mention C11 when referring to GCC
intrinsics.
* doc/README.macros (GC_BUILTIN_ATOMIC): Likewise.

--- a/configure.ac
+++ b/configure.ac
@@ -1038,7 +1038,7 @@ AS_IF([test x"$with_libatomic_ops" != xno],
           [ AC_MSG_RESULT([none])
             AS_IF([test x"$THREADS" != xnone],
                   [ AC_DEFINE([GC_BUILTIN_ATOMIC], [1],
-                              [Use C11 (GCC) atomic intrinsics instead of
+                              [Use GCC atomic intrinsics instead of
                                libatomic_ops primitives.]) ]) ])
     AO_TRYLINK_CFLAGS="" ],
   [ AC_MSG_RESULT([internal])
